CR-2009-05-11-1: Bugfix:     qmaster/profiling test
                               - enhanced error reporting
                               - give thread profiling more time to propagate
                                 the changes
                 Review:     RD

RH-2009-05-11-0: Enhancem.:  Hedeby:
                             New test checktree_hedeby/checktree/resources/move/simhost added
                             Tests also issue 645
                 Review:     TB 

CR-2009-05-11-0: Bugfix:     o test 1802 (only for csp systems) re-news
                               certificates, but did not copy them to remote
                               hosts.
                 Review:     MD

HP-2009-05-08-0: Enhancem.:  * Improved cluster shutdown functions
                               - now it is checked for every host if all daemons
                                 are really shut down
                             * Made remote_delete_directory() function aware of
                               local Windows users
                 Changed:    file_procedures.tcl, sge_procedures.tcl
                 Review:     CR

RD-2009-05-08-0: Enhancem.:  throughput test removes acccounting file to
                             reduce qacct run time
                 Review:     CR

CR-2009-05-07-0: Enhancem.:  o ge_has_feature()
                               Added new feature test "additional-jvm-arguments"
                             o main menu now shows "interpreted system version"
                             o install_core_system test:
                               - use "additional-jvm-arguments" feature test
                               - also check shadowd configs
                               - also check correct testsuite system version
                                 checking
                             o get_version_info()
                               - now returns major, minor and update release
                                 version info 